--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DBConnection": "Server=HAIVAN\\SQLEXPRESS01;Database=WebTraSua_C6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DBConnection": "Server=HAIVAN\\SQLEXPRESS01;Database=WebTraSua_C6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DBConnection": "Server=DESKTOP-CRTPNUI\\QUICUTE;Database=WebTraSua_C6(1);Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
