--- a/API/Admin/Admin.csproj
+++ b/API/Admin/Admin.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Syncfusion.Blazor" Version="19.2.0.47" />
   </ItemGroup>
 
 </Project>
