--- a/API/API/appsettings.json
+++ b/API/API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DBConnection": "Server=HAIVAN\\SQLEXPRESS01;Database=WebTraSua_C6_Final;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DBConnection": "Server=DESKTOP-CRTPNUI\\QUICUTE;Database=WebTraSua_C6_Final;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DBConnection": "Server=HAIVAN\\SQLEXPRESS01;Database=WebTraSua_C6_Final;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DBConnection": "Server=DESKTOP-CRTPNUI\\QUICUTE;Database=WebTraSua_C6_Final;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DBConnection": "Server=LAPTOP-3L0FO2D2\\SQLEXPRESS01;Database=WebTraSua_C6;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
